--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "aos": "^2.3.4",
     "helmet": "^8.0.0",
     "install": "^0.13.0",
     "npm": "^10.8.3",
