--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "style-component": "^0.0.1"
   },
   "devDependencies": {
